--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-twitter.consumerKey=<<CHANGE ME>>
-twitter.consumerSecret=<<CHANGE ME>>
-twitter.accessToken=<<CHANGE ME>>
-twitter.accessTokenSecret=<<CHANGE ME>>
-
+twitter.consumerKey=XOYucNwqEpfiTJ4J23rNEWy99
+twitter.consumerSecret=m8VxNycaVC5SIJICEXMIwW42JtQ9Vp12dcD1gppUt3kWvoa7QV
+twitter.accessToken=521738656-NJswIgFlrdFAlLxzkJtUza7sujd3z3Nz2NyAzieb
+twitter.accessTokenSecret=dI9CzjSrbYJIQUzmzRljUyupUwGd2lOr8ADucRcd0YDFV
