--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: java
 jdk:
 - oraclejdk8
 before_install:
-    openssl aes-256-cbc -K -iv -in application.properties.enc -out src/main/resources/application.properties -d
+    openssl aes-256-cbc -K $encrypted_b6cef198e097_key -iv $encrypted_b6cef198e097_iv -in application.properties.enc -out src/main/resources/application.properties -d
